--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
       </div>
 <!--       <div id="sharelink-container">
         <!-- button -->
-        <input type="button" id="getlink-button" value="Get link" onclick="generateShareLink()"/>
+<!--         <input type="button" id="getlink-button" value="Get link" onclick="generateShareLink()"/> -->
         <!-- text box -->
-        <input type="text" placeholder="http://" id="getlink-textbox" readonly/>
+<!--         <input type="text" placeholder="http://" id="getlink-textbox" readonly/> -->
         <!-- button in text box -->
-        <input type="button" id="copylink-button" value="Copy" onclick="copyLink()"/>
-      </div>
+<!--         <input type="button" id="copylink-button" value="Copy" onclick="copyLink()"/> -->
+<!--       </div> -->
     </div> -->
     <div id="ranking__pyramid">
       <div id="ranking__title"><strong>TOP 11</strong></div>
