--- a/index.html
+++ b/index.html
@@ -62,15 +62,8 @@
           <label class="checkbox-label" for="show-top11">Show Current Top 12</label>
         </div>
       </div>
-<!--       <div id="sharelink-container">
-        <!-- button -->
-<!--         <input type="button" id="getlink-button" value="Get link" onclick="generateShareLink()"/> -->
-        <!-- text box -->
-<!--         <input type="text" placeholder="http://" id="getlink-textbox" readonly/> -->
-        <!-- button in text box -->
-<!--         <input type="button" id="copylink-button" value="Copy" onclick="copyLink()"/> -->
-<!--       </div> -->
-    </div> -->
+<!-- PUT STUFF BACK HERE JUST IN CASE -->
+    </div>
     <div id="ranking__pyramid">
       <div id="ranking__title"><strong>TOP 11</strong></div>
       <div class="ranking__row">
