--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
   </div>
     <footer>
-        <p>Originally made by <a href="https://produce48.github.io/" target="https://produce48.github.io/">Produce48.github.io</a> please dont sue us </p>
+        <p>Originally made by <a href="https://produce48.github.io/" target="https://produce48.github.io/">Produce48.github.io</a> </p>
         <p>Come join us on our <a href="https://discord.gg/2aVqMKX" target="https://discord.gg/2aVqMKX">Produce X 101 Discord</a> ! </p>
     </footer>
 
