--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Produce X101 Ranker</title>
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   <meta name="viewport" content="initial-scale = 2.0, maximum-scale=1.0" />
-  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" href="assets/pickme.png">
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto+Condensed:400,700" rel="stylesheet">
 </head>
