--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
     </div>
     <div id="ranking__pyramid">
-      <div id="ranking__title"><strong>TOP 10</strong></div>
+      <div id="ranking__title"><strong>TOP 10 + X</strong></div>
       <div class="ranking__row">
         <!-- <div class="ranking__entry">
           <div class="ranking__entry-icon">
