--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <footer>
         <p>Originally made by <a href="https://produce48.github.io/" target="https://produce48.github.io/">Produce48.github.io</a> </p>
         <p>Come join us on our <a href="https://discord.gg/2aVqMKX" target="https://discord.gg/2aVqMKX">Produce X 101 Discord</a> ! </p>
+        <p id="switch_lang"><a href="?lang=en" target="https://discord.gg/2aVqMKX">switch to ENGLISH</a> </p>
     </footer>
 
   <!-- Load in script files -->
